Stopped blob animation on safari

--- a/src/widgets/slider/style.scss
+++ b/src/widgets/slider/style.scss
@@ -203,6 +203,12 @@ promo-slider {
       @media (prefers-reduced-motion) {
         animation: none;
       }
+
+      @media not all and (min-resolution: 0.001dpcm) {
+        @supports (-webkit-appearance: none) {
+          animation: none;
+        }
+      }
     }
 
     .image-object {
